added fonts and header
I added some fonts from Google's Fonts API, then added a title and links to make a header. Added some margin space at the bottom of the search results as per someone's request on Reddit.

--- a/recs/index.html
+++ b/recs/index.html
@@ -3,11 +3,19 @@
   <head>
     <link href="./style.css" rel="stylesheet"></link>
 
+     <h1>FanfictionBot Fic Recs</h1>
+     <p class = "headerLinks">
+          <a href="https://www.reddit.com/r/HPfanfiction/">/r/HPFanfiction</a>
+          | <a href="https://www.reddit.com/user/FanfictionBot">FanfictionBot</a>
+          | <a href = "https://github.com/FanfictionBot/fanfictionbot.github.io">Source Code</a>
+     </p>
+     <hr>
+
       <form id="form-search" class="search">
         <input id="input-search" type="search" placeholder="Enter fic id or URL..." autocomplete="off" required>
         <ul class="search-ac" id="search-results" class="search-ac"></ul>
       </form>
-      
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.0.11/purify.min.js"></script>
     <script src="data.js"></script>
     <script>
